--- a/npcs/Races Classes and Subclasses/feats.yaml
+++ b/npcs/Races Classes and Subclasses/feats.yaml
@@ -217,7 +217,7 @@
    - title: Tough
    - content: Your hit point maximum increases by an amount equal to twice your level then by +2 at each level.
    - title: Tower of Iron Will
-   - content: Prerequisite; Psionic Talent feature or Wild Talent feat. Your mind’s defenses are formidable. After you or another creature you can see within 30 feet of you fails a saving throw, you can use your 
+   - content: Prerequisite - Psionic Talent feature or Wild Talent feat. Your mind’s defenses are formidable. After you or another creature you can see within 30 feet of you fails a saving throw, you can use your 
               reaction to roll your Psionic Talent die and add the number rolled to the saving throw, potentially causing it to succeed.
    - title: Tracker
    - content: Increase your Wisdom score by 1, to a maximum of 20. You learn the hunter’s mark spell. You can cast it once without expending a spell slot, and you must finish a long rest before you can cast it in this way again.
