--- a/npcs/gothenni_vosk.yaml
+++ b/npcs/gothenni_vosk.yaml
@@ -535,7 +535,20 @@ npc:
     - title: Soul of Deciet
     - content: Your thoughts can't be read by telepathy or other means, unless you allow it. You can present false thoughts by making a Charisma (Deception) check contested by the mind reader's Wisdom (Insight) check.
                Additionally, no matter what you say, magic that would determine if you are telling the truth indicates you are being truthful if you so choose, and you can't be compelled to tell the truth by magic
-   
+  - title: Legendary Resistance
+  - content: (3/Day), If Gothenni Vosk fails a saving throw they can choose to succeed instead 
+  - title: Legendary Actions
+  - content: Gothenni Vosk can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Gothenni Vosk regains spent 
+             Legendary Actions at the start of their turn.
+  - abilities:
+    - title: Vampire's Kiss
+    - content: Gothenni Vosk can cast Dominate Person without any components with a spell DC 18
+    - title: Vampire's Bite
+    - content: Gothenni Vosk can use his Vampiric Gift attack
+    - title: Company Man
+    - content: Gothenni Vosk can cast Gate, opening up to 5 portals to summon other members of the Assassin's Guild to join the fight
+  - title: Feats
+  - content: Alert, Sharpshooter, Keen Mind, Skulker
   - title: Attacks
   - content: 1 attacks with Vampiric Gift
   - title: Combat Tactics
