--- a/npcs/hadoovra_romaheller.yaml
+++ b/npcs/hadoovra_romaheller.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -465,21 +465,49 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
     skills:
-    - Dwarf Abilities:
-      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus
+    - Archotecture and Engineering
+    proficiencies:
+    - History
+    - Perception
+    - Insight    
+    - Performance
+    - Persuasion
+    - Mason's Tools
+    - Woodcrafter's Tools
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus
 
-    special-abilities:
-    - Proficiencies: Architecture and Engineering, Performance, Insight, Perception
-    attacks: |
-      1 attacks with Light Hammer
-    combat-tactics: |
-      She will only enter combat if her life is in danger
-    special-equipment:
-    - Magical Designing Tools that give a +2 bonus to intelligence roles when using them to design blueprints or schematics
+  - title: Attacks
+  - content: 1 attacks with Light Hammer
+  - title: Combat Tactics
+  - content: She will only enter combat if her life is in danger
+
+  - title: Special Equipment
+  - abilities:
+    - title: Tools of Designing
+    - content: Magical Designing Tools that give a +2 bonus to intelligence roles when using them to design blueprints or schematics
 
   profile:
 
@@ -493,7 +521,7 @@ npc:
     background-story: |
       Hadoovra is a mountain dwarf that has left the mountains and moved to the city. After fighting her way through architectural and engineering school, she works hard every day to prove herself in a male dominated industry.
       Her fierce drive to master her craft and get ahead has made her well know and respected in her vocation, but she is also well known for letting her temper get the better of her. Her strong work ethic has also lead to a
-      bit of a drinking problem in he relaxation time, which also does not help her temper at all
+      bit of a drinking problem in her relaxation time, which also does not help her temper at all
 
     #
     # Personality (or something like that):
@@ -504,4 +532,5 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Tall for a dwarf, she has broad shoulders, a dark 5 o'clock shadow, long brown hair tied back in a braid
+      Tall for a dwarf, she has broad shoulders, a dark 5 o'clock shadow, long brown hair tied back in a braid. Hadoovra is cool and intelligent, but has an exceedingly hot temper on a hair trigger.  She feels like she needs to 
+      prove hersself all of the time and is very hard on herself on the rare occasion that she makes a mistake
